# checksum

./: .gitignore  CMakeLists.txt  CheckSum.cpp  CheckSum.h  Crc32Sum.cpp  Crc32Sum.h  CryptoProvider.cpp  CryptoProvider.h  MD5Sum.cpp  MD5Sum.h  Makefile  README.md  dll_export.h  dllmain.cpp  fileSum.cpp  fileSum.h  library.cpp  library.h  pch.h  tchar_port.h  testCheckSum  testCheckSum.cpp
